--- a/app/views/diets/index.html.erb
+++ b/app/views/diets/index.html.erb
@@ -28,10 +28,10 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
-        <img src="<%= image_path('dieta_4.jpg') %>" class="img-responsive img-border-left">
+      <div class="col-md-6">
+        <img src="<%= image_path('dieta_1200_2.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Dieta oczyszczająca i odchudzająca oparta jest na pełnowartościowych i urozmaiconych daniach, zapewnia 5
           smacznych posiłków dziennie. Jest ona odpowiednia dla osób, które spedzają sporo czasu w trybie siedzącym z
           małą aktywnością fizyczną. Dieta 1200 kcal może być stosowana długotrwale w celu systematycznego oczyszczania
@@ -51,10 +51,10 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-6">
         <img src="<%= image_path('dieta_5.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Dieta dostarcza organizmowi niezbędnych składników odżywczych, zachowując jednocześnie odpowiednie proporcje
           między węglowodanami, białkiem i tłuszczem. Może być stosowana przez dłuższy czas przez każdego zdrowego,
           dorosłego człowieka. Bez szkody dla organizmu schudną na niej mężczyźni, osoby bardzo otyłe lub wykonujące
@@ -74,10 +74,10 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
-        <img src="<%= image_path('dieta_7.jpg') %>" class="img-responsive img-border-left">
+      <div class="col-md-6">
+        <img src="<%= image_path('dieta_1700_2.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Dieta przeznaczona zarówno dla Pań i Panów o zwiększonej aktywności fizycznej. Program
           ten zawiera pięć pełnowartościowych posiłków z odpowiednią ilością białek, tłuszczy i węglowodanów,
           które dostarczają nam niezbędną energię na cały dzień. Jest to odpowiednia kaloryczność dla
@@ -97,10 +97,10 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
-        <img src="<%= image_path('dieta_8.jpg') %>" class="img-responsive img-border-left">
+      <div class="col-md-6">
+        <img src="<%= image_path('dieta_2000_2.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Jest to dieta o wartości kalorycznej, która spełnia minimalne zapotrzebowanie dla Panów
           uprawiających sport, bądź ćwiczenia siłowe. Kaloryczność 2000 kcal to startowa dieta dla Panów, którzy rozpoczynają przygodę z redukcją masy ciała. Spełnia ona zapotrzebowanie na większość witamin i składników mineralnych, dzięki czemu mamy więcej energii. </p>
       </div>
@@ -118,12 +118,12 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
-        <img src="<%= image_path('dieta_9.jpg') %>" class="img-responsive img-border-left">
+      <div class="col-md-6">
+        <img src="<%= image_path('dieta_vege_2.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Jest to dieta, która spełnia zapotrzebowanie na daną kaloryczność, odpowiednią ilość białek,
-          tłuszczy i węglowodanów z całkowitym wykluczeniem mięsa i ryb. Składnikie te są zamieniane na produkty wegańskie lub wegetariańskie w postaci tofu, nasion strączkowych oraz nabiałów i jaj.
+          tłuszczy i węglowodanów z całkowitym wykluczeniem mięsa i ryb. Składniki te są zamieniane na produkty wegańskie lub wegetariańskie w postaci tofu, nasion strączkowych oraz nabiałów i jaj.
           Jest to dieta dostępna we wszystkich kalorycznościach</p>
       </div>
       <div class="clearfix"></div>
@@ -140,12 +140,12 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
-        <img src="<%= image_path('dieta_6.jpg') %>" class="img-responsive img-border-left">
+      <div class="col-md-6">
+        <img src="<%= image_path('vege_ryby_2.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Jest to dieta, która spełnia zapotrzebowanie na daną kaloryczność, odpowiednią ilość białek,
-          tłuszczy i węglowodanów z całkowitym wykluczeniem mięsa. Składnikie te są zamieniane na produkty wegańskie lub wegetariańskie w postaci tofu, nasion strączkowych oraz nabiałów i jaj. Dodatkowo w diecie zawarte są ryby. Jest to dieta dostępna we wszystkich kalorycznościach.</p>
+          tłuszczy i węglowodanów z całkowitym wykluczeniem mięsa. Składniki te są zamieniane na produkty wegańskie lub wegetariańskie w postaci tofu, nasion strączkowych oraz nabiałów i jaj. Dodatkowo w diecie zawarte są ryby. Jest to dieta dostępna we wszystkich kalorycznościach.</p>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -161,13 +161,33 @@
         <hr>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-6">
         <img src="<%= image_path('dieta_10.jpg') %>" class="img-responsive img-border-left">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <p>Dieta dr Dąbrowskiej jest dwuetapową dietą, której celem jest oczyszczenie organizmy z toksyn i
           przywrócenie mu właściwej równowagi wewnętrznej. Taka kuracja owocowo warzywna to około 600-800 kcal. Może trwać nawet do 3 tygodni, z dodatkowym tygodniem wyprowadzenia z diety, polegającym na
           stopniowym wprowadzaniu pojedyńczych składników.</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="box">
+      <div class="col-lg-12">
+        <hr>
+        <h2 class="intro-text text-center">
+          Dieta SPORT - 3500 kcal
+        </h2>
+        <hr>
+      </div>
+
+      <div class="col-md-6">
+        <img src="<%= image_path('dieta_sport_2.jpg') %>" class="img-responsive img-border-left">
+      </div>
+      <div class="col-md-6">
+        <p>Jest to dieta dla osób o bardzo wysokiej aktywności fizycznej, głównie mężczyzn. Składa się z pięciu zbilansowanych, opartych głównie na białku i węglowodanach posiłkach, ale nie zabraknie też w niej odpowiedniej ilości warzyw i owoców. Spełnia ona zapotrzebowanie na większość witamin i składników mineralnych, dzięki czemu mamy więcej energii. Dieta ta sprawdza się przy intensywnych treningach siłowych.</p>
       </div>
       <div class="clearfix"></div>
     </div>
