--- a/app/views/price_lists/index.html.erb
+++ b/app/views/price_lists/index.html.erb
@@ -89,13 +89,13 @@
 
               <tr>
                 <td colspan="5">
-                  * zestaw bez glutenu (makarony i nabiał) + 2zł
+                  * zestaw bez glutenu (zamiana makaronów i chleba na produkty bez glutenu) + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  * zestaw bez laktozy + 2zł
+                  * zestaw bez laktozy (zamiana mleka, jogurtów i twarogów na produkty bez laktozy) + 2zł
                 </td>
               </tr>
 
@@ -189,13 +189,13 @@
 
               <tr>
                 <td colspan="5">
-                  * zestaw bez glutenu (makarony i nabiał) + 2zł
+                  * zestaw bez glutenu (zamiana makaronów i chleba na produkty bez glutenu) + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  * zestaw bez laktozy + 2zł
+                  * zestaw bez laktozy (zamiana mleka, jogurtów i twarogów na produkty bez laktozy) + 2zł
                 </td>
               </tr>
 
@@ -289,13 +289,13 @@
 
               <tr>
                 <td colspan="5">
-                  * zestaw bez glutenu (makarony i nabiał) + 2zł
+                  * zestaw bez glutenu (zamiana makaronów i chleba na produkty bez glutenu) + 2zł
                 </td>
               </tr>
 
               <tr>
                 <td colspan="5">
-                  * zestaw bez laktozy + 2zł
+                  * zestaw bez laktozy (zamiana mleka, jogurtów i twarogów na produkty bez laktozy) + 2zł
                 </td>
               </tr>
 
