--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,26 +10,30 @@
             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
             <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="6"></li>
           </ol>
 
           <div class="carousel-inner">
             <div class="item active">
-              <img src="<%= image_path('slide_1.png') %>" class="img-responsive img-full">
+              <img src="<%= image_path('slide_1.jpg') %>" class="img-responsive img-full">
             </div>
             <div class="item">
               <img src="<%= image_path('slide_2.jpg') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img src="<%= image_path('slide_3.png') %>" class="img-responsive img-full">
+              <img src="<%= image_path('slide_3.jpg') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img src="<%= image_path('slide_4.png') %>" class="img-responsive img-full">
+              <img src="<%= image_path('slide_4.jpg') %>" class="img-responsive img-full">
             </div>
             <div class="item">
-              <img src="<%= image_path('slide_5.png') %>" class="img-responsive img-full">
+              <img src="<%= image_path('slide_5.jpg') %>" class="img-responsive img-full">
             </div>
             <div class="item">
               <img src="<%= image_path('slide_6.jpg') %>" class="img-responsive img-full">
+            </div>
+            <div class="item">
+              <img src="<%= image_path('slide_7.jpg') %>" class="img-responsive img-full">
             </div>
           </div>
 
